<resources>
    <string name="app_name">TimeCapsule</string>
    <string name="title">TimeCapsule</string>
    <string name="time_capsule">Time Capsule</string>
    <string name="login">Log-In</string>
    <string name="sign_up">Sign-Up</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="findPassword">Find password</string>
    <string name="email_cannot_empty_warning">이메일을 입력해주세요.</string>
    <string name="join_success">회원가입에 성공했습니다.</string>
    <string name="login_blank">이메일과 비밀번호를 입력해주세요</string>
    <string name="password_length_warning">비밀번호는 6자리 이상이어야합니다.</string>
    <string name="password_not_equal_warning">비밀번호가 일치하지 않습니다.</string>
    <string name="password_email_warning">이미 가입된 이메일입니다..</string>
    <string name="login_failed">로그인에 실패했습니다.</string>
    <string name="password_check">re-enter password</string>
    <string name="tmp_text">TEXT</string>
    <string name="today_answer">Today Answer</string>
    <string name="today_writeAnswer">답변 작성하기</string>
    <string name="today_diary">Today Diary</string>
    <string name="today_diaryContent">오늘의 일기 내용</string>
    <string name="how_to_use">사용법</string>
    <string name="e_mail">E-mail</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="question">Hello.\nHow are you, today?</string>
    <string name="find_password">Find Password</string>
    <string name="today_question">Today Question</string>
    <string name="Past_question">Past Question</string>
    <string name="type_your_email">type your Email...</string>
    <string name="send_password_reset_email">Send password reset Email</string>
    <string name="month">Month</string>
    <string name="diary">Diary</string>
    <string name="diary_answer">View Diary</string>
    <string name="save">save</string>
    <string name="manual">This app can calm you down by recording and reflecting on your day.\n\n In today\'s question, record your feelings and thoughts when you see the question.\n\n In your diary, you\'re free to record what you didn\'t write in today\'s questions.\n\n In the answers, you can view the answers that you recorded in the past by question.\n\n Clicking on the day or the desired date gives you time to reflect and think about your thoughts 10 days ago. \n\n We want you to get to know yourself more through this app. Good luck:)</string>
</resources>