<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46606D">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findPassword"
        android:textAllCaps="false"
        android:textColor="#f2f2f2"
        android:fontFamily="@font/ablb"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/getEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_email"
        android:inputType="textEmailAddress"
        android:textAllCaps="false"
        android:fontFamily="@font/ablb"
        android:textColorHint="#f2f2f2"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="100dp"/>


    <Button
        android:id="@+id/sendEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="200dp"
        android:text="@string/send_password_reset_email"
        android:textAllCaps="false"
        android:fontFamily="@font/ablb"
        android:textColor="#46606D" />


</LinearLayout>