    <?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46606D">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#F2F2F2"
        android:textSize="20sp"
        android:fontFamily="@font/ablb"
        android:gravity="center"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint = "@string/e_mail"
        android:textColorHint="#f2f2f2"
        android:fontFamily="@font/ablb"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint = "@string/password"
        android:textColorHint="#f2f2f2"
        android:fontFamily="@font/ablb"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"/>


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#46606D"
        android:fontFamily="@font/ablb"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/findPwBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/find_password"
        android:textAllCaps="false"
        android:textColor="#46606D"
        android:fontFamily="@font/ablb"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="20dp"/>


</LinearLayout>